--- a/BaggageAutomation/MainWindow.xaml
+++ b/BaggageAutomation/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:BaggageAutomation"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Background="#FF36393E">
+        <Button x:Name="Scan_Btn" Content="Scan QR Code" HorizontalAlignment="Center" Margin="0,344,0,0" VerticalAlignment="Top" Click="Scan_Btn_Click"/>
 
     </Grid>
 </Window>
