--- a/BaggageAutomation/MainWindow.xaml
+++ b/BaggageAutomation/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid Background="#FF36393E">
         <Button x:Name="Scan_Btn" Content="Scan QR Code" HorizontalAlignment="Center" Margin="0,344,0,0" VerticalAlignment="Top" Click="Scan_Btn_Click"/>
+        <Image x:Name="ImageBox" HorizontalAlignment="Left" Height="190" Margin="288,39,0,0" VerticalAlignment="Top" Width="232"/>
 
     </Grid>
 </Window>
