implementing some visual improvements to the layout
just some button rounding and color changes

--- a/BaggageAutomation/App.xaml
+++ b/BaggageAutomation/App.xaml
@@ -4,6 +4,17 @@
              xmlns:local="clr-namespace:BaggageAutomation"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button" x:Key="round_Btn">
+            <Setter Property="Background" Value="DimGray"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" CornerRadius="20" BorderThickness="2" Padding="5" BorderBrush="#FF272537">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"></ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
