--- a/BaggageAutomation/MainWindow.xaml
+++ b/BaggageAutomation/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Button x:Name="QRGeneration" Content="Buy Ticket" Style="{StaticResource round_Btn}" HorizontalAlignment="Center" Margin="0,292,0,0" VerticalAlignment="Top" RenderTransformOrigin="-3.205,0.016" AutomationProperties.IsColumnHeader="True" Click="Button_Click" Height="49" Width="124"/>
+        <Button x:Name="QRGeneration" Content="Buy Ticket" Style="{StaticResource round_Btn}" HorizontalAlignment="Center" Margin="0,292,0,0" VerticalAlignment="Top" Click="Button_Click" Height="49" Width="124"/>
         <Label Content="Welcome to Hartsfield Jackson Airport " HorizontalAlignment="Center" Margin="0,86,0,0" VerticalAlignment="Top" Foreground="White"/>
         <Label Content="Please click on the button to purchase a ticket!" HorizontalAlignment="Center" Margin="0,144,0,0" VerticalAlignment="Top" Foreground="White"/>
 
