--- a/BaggageAutomation/OrderTicket.xaml
+++ b/BaggageAutomation/OrderTicket.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BaggageAutomation"
         mc:Ignorable="d"
-        Title="OrderTicket" Height="450" Width="800" Closing="Window_Closing">
+        Title="OrderTicket" Height="450" Width="800">
     <Grid Background="#FF272537">
         <Label x:Name="NameLabel" Content="Name" HorizontalAlignment="Left" Margin="53,45,0,0" VerticalAlignment="Top" Foreground="White"/>
         <Label x:Name="AirlineLabel" Content="Airline" HorizontalAlignment="Left" Margin="55,114,0,0" VerticalAlignment="Top" Foreground="White"/>
-        <ComboBox x:Name="AirlineComboBox" HorizontalAlignment="Left" Margin="145,118,0,0" VerticalAlignment="Top" Width="120">
+        <ComboBox x:Name="AirlineComboBox" HorizontalAlignment="Left" Margin="145,118,0,0" VerticalAlignment="Top" Width="163">
             <TextBox TextWrapping="Wrap" Text="Choose Airline" Width="120"/>
             <ComboBoxItem Content="Delta" Name="Delta"></ComboBoxItem>
             <ComboBoxItem Content="American" Name="American"></ComboBoxItem>
@@ -19,10 +19,11 @@
             <ComboBoxItem Content="Alaska" Name="Alaska"></ComboBoxItem>
         </ComboBox>
         <Label x:Name="Destination" Content="Destination" HorizontalAlignment="Left" Margin="42,173,0,0" VerticalAlignment="Top" Foreground="White"/>
-        <TextBox x:Name="DestinationTextBox" HorizontalAlignment="Left" Margin="145,176,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100" Height="20"/>
+        <TextBox x:Name="DestinationTextBox" HorizontalAlignment="Left" Margin="145,176,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" Height="20"/>
         <Button x:Name="Complete" Content="Complete" HorizontalAlignment="Left" Margin="191,320,0,0" Style="{StaticResource round_Btn}" VerticalAlignment="Top" Width="101" ButtonBase.Click="Complete_Click"/>
-        <TextBox x:Name="NameText" HorizontalAlignment="Left" Margin="145,48,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100" Height="20"/>
+        <TextBox x:Name="NameText" HorizontalAlignment="Left" Margin="145,48,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" Height="20"/>
         <Label x:Name="NameErrLbl" Content="Please Enter a First and Last name(A-Z)" HorizontalAlignment="Left" Margin="53,73,0,0" VerticalAlignment="Top" Width="255" Height="30" Visibility="Hidden" Foreground="#FFED2727" FontSize="14"/>
-
+        <Label x:Name="AirlineErrLbl" Content="Please Select your desired Airline" HorizontalAlignment="Left" Margin="112,143,0,0" VerticalAlignment="Top" Width="255" Height="30" Visibility="Hidden" Foreground="#FFED2727" FontSize="14"/>
+        <Label x:Name="DestinationErrLbl" Content="Please Enter Your Destination" HorizontalAlignment="Left" Margin="112,196,0,0" VerticalAlignment="Top" Width="255" Height="30" Visibility="Hidden" Foreground="#FFED2727" FontSize="14"/>
     </Grid>
 </Window>
